Fix birthday select on ie8

--- a/app/assets/stylesheets/common/carousel.scss
+++ b/app/assets/stylesheets/common/carousel.scss
@@ -455,7 +455,7 @@ body {
   }
 }
 
-.ie7 {
+.ie7, .ie8 {
   #survey {
     ul.questions {
       li.about {
